# superlib

./: README.md  func.sql  init.sql  pyproject.toml  queries.sql  trigger.sql
app/: __init__.py  __main__.py  models.py
static/css/: custom-style.css
templates/: about.html  base.html  book-detail.html  contact.html  feedback.html  index.html  signin.html  signup.html
templates/book/: index.html
